# shield_perception

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml
data_dump/: perception_params.npy
docs/: shield_expts.txt
docs/html/: annotated.html  classcalibdata_1_1Calibration-members.html  classcalibdata_1_1Calibration.html  classes.html  classmujoco_1_1GlfwAdapter-members.html  classmujoco_1_1GlfwAdapter.html  classmujoco_1_1GlfwAdapter__coll__graph.map  classmujoco_1_1GlfwAdapter__coll__graph.md5  classmujoco_1_1GlfwAdapter__inherit__graph.map  classmujoco_1_1PlatformUIAdapter.html  (+258 more)
improvement/: perception.py  perception_ros.py  perception_stereo_depth.py  perception_stereo_depth_ros.py
launch/: filtering.launch  kinect_external_filter.launch  lidar_ball_detector.launch  sp2.launch  zed_filter.launch  zed_sync_nodelet.launch
params/: common.yaml  zed2i.yaml
rviz/: zed2i.rviz
scripts/: bounding_box_visual.py  calibdata.py  calibrate_via_trajectory.py  camcalib.py  color_picker.py  compute_joint_residual.py  compute_projectile.py  depth_sensing.py  depth_sensing_live.py  detect_ball.py  lidar_ball_detector.py  lidar_event_plotter.py  log_projectile_data.py  p3_calibrate.py  p3_utils.py  points_from_camera.py  publish_tfs.py  record_tfs.py  registration.py  tf_data.pkl  tf_data_2.pkl  track_ball.py  track_ball_bkup.py  track_ball_old.py  track_ball_sdk.py  track_ball_zed.py  visualize_bounding_box.py  visualize_calib_data.py  visualize_projectile.py  zed_record_svo.py
src/: fake_perception_node.cpp
tmux/: tmux_bag_expts.sh  tmux_robot_expts.sh
(+106 files in other folders)
